# AyxCppTest

./: AyxCppTest  AyxCppTest.cbp  CMakeCache.txt  CMakeLists.txt  Exercise3_CR  Makefile  cmake_install.cmake  exercise1.cpp  exercise2.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  polygon.cpp  polygon.h  spatial.cpp  spatial.h
